--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ padding: 0.5rem;
     justify-content: space-between;
     align-items: center;
     margin-top: 2rem;
+    
 }
 .dropdown i{
     font-size: 1rem;
@@ -80,4 +81,17 @@ form button{
     box-shadow: 0 0 10px #ff416c;
     font-size: 1.2rem;
     cursor:pointer;
+}
+select::-webkit-scrollbar {
+  width: 8px;
+  background-color: #1a1a2e; /* match your dark background */
+}
+
+select::-webkit-scrollbar-track {
+  background-color: #1a1a2e;
+}
+
+select::-webkit-scrollbar-thumb {
+  background-color: #ff416c;
+  border-radius: 5px;
 }
